<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient_color"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/layout_border"
            android:layout_weight="0.95">

            <TextView
                android:text="@string/app_name"
                style="@style/login_title"
                />

            <TextView
                android:id="@+id/tvApp"
                android:text="@string/login_title"
                style="@style/login_heading1"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <EditText
                    android:id="@+id/editEmail"
                    app:backgroundTint="@color/white"
                    android:hint="@string/email"
                    style="@style/login_editText"
                    />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_marginTop="0dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:backgroundTint="@color/white"
                    style="@style/login_editText"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnLogin"
                        android:background="@color/login_blue"
                        android:textAllCaps="false"
                        android:text="@string/login"
                        style="@style/login_btn"
                        />

                    <TextView
                        android:id="@+id/tvCreateNewAccount"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:text="@string/create_new_account"
                        style="@style/login_btn"
                        />
                </LinearLayout>

            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:minWidth="250dp"
                android:max="100"
                android:indeterminate="true"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:progress="1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>